[package]
name = "r-matrix"
description = "Rust port of cmatrix."
version = "0.2.8"
edition = "2024"
authors = ["Lucas Rooyakkers <lucas.rooyakkers@protonmail.com>"]
license = 'GPL-3.0-or-later'

[dependencies]
crossterm = "0.29.0"
rand = { version = "0.8.5", features = ["small_rng"] }
structopt = "0.3.26"

[target.'cfg(unix)'.dependencies]
signal-hook = { version = "0.3.17", features = ["extended-siginfo"] }
