[package]
name = "r-matrix"
description = "Rust port of cmatrix."
version = "2.0.3"
edition = "2024"
authors = ["Lucas Rooyakkers <lucas.rooyakkers@protonmail.com>"]
license = 'GPL-3.0-or-later'
repository = "https://github.com/Fierthraix/rmatrix"

[dependencies]
crossterm = "0.29.0"
rand = "0.10.1"
structopt = "0.3.26"

[target.'cfg(unix)'.dependencies]
signal-hook = { version = "0.4.4", features = ["extended-siginfo"] }
